@@ -839,7 +839,7 @@
 \i \i    a=10 assign a variable      sum cnt  Sum, count                          \|\i \i
 \i \i 2+3:ins multiple commands      avg dev  Average, std. deviation             \|\i \i
 \i \i    e pi constants              \uOPERATORS\u                                    \|\i \i
-\i \i     ans previous result        ^  * / %  + -  < <= > >= == !=  &&  ||  ? :  \|\i \i
+\i \i     ans previous result        ! ^  * / %  + -  < <= > >= == !=  &&  ||  ? :\|\i \i
 }
 
 {Names
